# counterfactuals

./: .gitignore  .pre-commit-config.yaml  API_start.sh  LICENSE  README.md  pyproject.toml
api/: classification.py  helpers.py  main.py  regression.py
docs-site/: mkdocs.yml
docs-site/docs/: api.md  getting-started.md  overview.md  structure.md  usage.md
docs-site/site/: 404.html  index.html
docs-site/site/api/: index.html
docs-site/site/getting-started/: index.html
docs-site/site/overview/: index.html
docs-site/site/search/: search_index.json
docs-site/site/structure/: index.html
docs-site/site/usage/: index.html
notebooks/: basic_demo.ipynb  classification_demo.ipynb  dev.ipynb  regression_demo.ipynb
src/: __init__.py  debug.py
src/cf_code/: __init__.py  counterfactuals.py  genetic_counterfactuals.py  prototypes.py
src/data_loader/: __init__.py  data.py
src/model_training/: __init__.py  classification_training.py  regression_training.py
src/pydantic_models/: __init__.py  models.py
