[project]
name = "counterfactuals"
version = "0.1.0"
description="A package to generatel counterfactuals for Machine Learning models"
readme = "README.md"
requires-python = ">=3.10,<3.12"
dependencies = [
    "pandas",
    "numpy",
    "scikit-learn",
    "scipy",
    "matplotlib",
    "xgboost",
    "explainerdashboard",
    "ipywidgets",
    "fastapi",
    "joblib",
    "ipykernel",
    "uvicorn",
    "pydantic",
    "debugpy>=1.8.15",
    "gower>=0.1.2",
    "pre-commit>=4.3.0",
]
